chore: update requirements and description modified, test_user_controller works
